--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 
 section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--gray-100);
   display: flex;
   justify-content: center;
@@ -66,6 +66,7 @@ section::before {
   gap: 100px;
   max-width: 920px;
   margin: 0 50px;
+  padding: 50px 0;
 }
 
 @media (max-width: 800px) {
